
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct smi_info {TYPE_1__* curr_msg; } ;
struct notifier_block {int dummy; } ;
struct TYPE_2__ {unsigned char* data; unsigned int data_size; } ;


 int NOTIFY_DONE ;
 int NOTIFY_STOP ;
 unsigned char STORAGE_CMD_GET_SDR ;
 unsigned char STORAGE_NETFN ;
 int return_hosed_msg_badsize (struct smi_info*) ;

__attribute__((used)) static int dell_poweredge_bt_xaction_handler(struct notifier_block *self,
          unsigned long unused,
          void *in)
{
 struct smi_info *smi_info = in;
 unsigned char *data = smi_info->curr_msg->data;
 unsigned int size = smi_info->curr_msg->data_size;
 if (size >= 8 &&
     (data[0]>>2) == STORAGE_NETFN &&
     data[1] == STORAGE_CMD_GET_SDR &&
     data[7] == 0x3A) {
  return_hosed_msg_badsize(smi_info);
  return NOTIFY_STOP;
 }
 return NOTIFY_DONE;
}
