; ModuleID = '/home/carl/AnghaBench/linux/drivers/char/ipmi/extr_ipmi_si_intf.c_dell_poweredge_bt_xaction_handler.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/char/ipmi/extr_ipmi_si_intf.c_dell_poweredge_bt_xaction_handler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.notifier_block = type { i32 }
%struct.smi_info = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i8*, i32 }

@STORAGE_NETFN = common dso_local global i8 0, align 1
@STORAGE_CMD_GET_SDR = common dso_local global i8 0, align 1
@NOTIFY_STOP = common dso_local global i32 0, align 4
@NOTIFY_DONE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.notifier_block*, i64, i8*)* @dell_poweredge_bt_xaction_handler to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @dell_poweredge_bt_xaction_handler(%struct.notifier_block* %0, i64 %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.notifier_block*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i8*, align 8
  %8 = alloca %struct.smi_info*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  store %struct.notifier_block* %0, %struct.notifier_block** %5, align 8
  store i64 %1, i64* %6, align 8
  store i8* %2, i8** %7, align 8
  %11 = load i8*, i8** %7, align 8
  %12 = bitcast i8* %11 to %struct.smi_info*
  store %struct.smi_info* %12, %struct.smi_info** %8, align 8
  %13 = load %struct.smi_info*, %struct.smi_info** %8, align 8
  %14 = getelementptr inbounds %struct.smi_info, %struct.smi_info* %13, i32 0, i32 0
  %15 = load %struct.TYPE_2__*, %struct.TYPE_2__** %14, align 8
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 0
  %17 = load i8*, i8** %16, align 8
  store i8* %17, i8** %9, align 8
  %18 = load %struct.smi_info*, %struct.smi_info** %8, align 8
  %19 = getelementptr inbounds %struct.smi_info, %struct.smi_info* %18, i32 0, i32 0
  %20 = load %struct.TYPE_2__*, %struct.TYPE_2__** %19, align 8
  %21 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %20, i32 0, i32 1
  %22 = load i32, i32* %21, align 8
  store i32 %22, i32* %10, align 4
  %23 = load i32, i32* %10, align 4
  %24 = icmp uge i32 %23, 8
  br i1 %24, label %25, label %52

25:                                               ; preds = %3
  %26 = load i8*, i8** %9, align 8
  %27 = getelementptr inbounds i8, i8* %26, i64 0
  %28 = load i8, i8* %27, align 1
  %29 = zext i8 %28 to i32
  %30 = ashr i32 %29, 2
  %31 = load i8, i8* @STORAGE_NETFN, align 1
  %32 = zext i8 %31 to i32
  %33 = icmp eq i32 %30, %32
  br i1 %33, label %34, label %52

34:                                               ; preds = %25
  %35 = load i8*, i8** %9, align 8
  %36 = getelementptr inbounds i8, i8* %35, i64 1
  %37 = load i8, i8* %36, align 1
  %38 = zext i8 %37 to i32
  %39 = load i8, i8* @STORAGE_CMD_GET_SDR, align 1
  %40 = zext i8 %39 to i32
  %41 = icmp eq i32 %38, %40
  br i1 %41, label %42, label %52

42:                                               ; preds = %34
  %43 = load i8*, i8** %9, align 8
  %44 = getelementptr inbounds i8, i8* %43, i64 7
  %45 = load i8, i8* %44, align 1
  %46 = zext i8 %45 to i32
  %47 = icmp eq i32 %46, 58
  br i1 %47, label %48, label %52

48:                                               ; preds = %42
  %49 = load %struct.smi_info*, %struct.smi_info** %8, align 8
  %50 = call i32 @return_hosed_msg_badsize(%struct.smi_info* %49)
  %51 = load i32, i32* @NOTIFY_STOP, align 4
  store i32 %51, i32* %4, align 4
  br label %54

52:                                               ; preds = %42, %34, %25, %3
  %53 = load i32, i32* @NOTIFY_DONE, align 4
  store i32 %53, i32* %4, align 4
  br label %54

54:                                               ; preds = %52, %48
  %55 = load i32, i32* %4, align 4
  ret i32 %55
}

declare dso_local i32 @return_hosed_msg_badsize(%struct.smi_info*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
